--- a/results/tract_anatomy/thalamocortical_connection_anatomy.Rmd
+++ b/results/tract_anatomy/thalamocortical_connection_anatomy.Rmd
@@ -230,7 +230,7 @@ ggplot(tract.meanFA.merged, aes(x = mean_FA.pnc, y = mean_FA.hcpd)) +
   axis.line = element_line(linewidth = .2), 
   axis.ticks = element_line(linewidth = .2)) 
 
-ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure3/FA_correlation_PNCHCPD.pdf", device = "pdf", dpi = 500, width = 1.65, height = 1.3)
+ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure3/FA_correlation_PNCHCPD.pdf", device = "pdf", dpi = 500, width = 1.8, height = 1.4)
 ```
 
 **Thalamocortical connection FA organization along the S-A axis**
@@ -263,6 +263,8 @@ perm.sphere.p(x = spin.data$mean_FA, y = spin.data$SA.axis, perm.id = perm.id.fu
 
 *Thalamocortical FA by S-A axis plot*
 
+PNC 
+
 ```{r, warning=F, message=F}
 ggplot(tract.meanFA.pnc, aes(x = SA.axis, y = mean_FA)) +
   geom_point(aes(color = SA.axis), size = 0.5) +
@@ -280,7 +282,29 @@ ggplot(tract.meanFA.pnc, aes(x = SA.axis, y = mean_FA)) +
   axis.line = element_line(linewidth = .2), 
   axis.ticks = element_line(linewidth = .2)) 
 
-ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure3/FA_SArank_PNC.pdf", device = "pdf", dpi = 500, width = 1.97, height = 1.3)
+ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure3/FA_SArank_PNC.pdf", device = "pdf", dpi = 500, width = 2.15, height = 1.4)
+```
+
+HCPD 
+
+```{r, warning=F, message=F}
+ggplot(tract.meanFA.hcpd, aes(x = SA.axis, y = mean_FA)) +
+  geom_point(aes(color = SA.axis), size = 0.5) +
+  geom_smooth(method = "lm", linewidth = 0.3, color = c("gray25")) + 
+  theme_classic() +
+  scale_fill_gradient2(low = "goldenrod1", mid = "white", high = "#6f1282", guide = "colourbar", aesthetics = "color", name = NULL, limits = c(1, 360), midpoint = 180) +
+  labs(x="\nSensorimotor-association axis rank", y="Connection FA\n") +
+  theme(legend.position = "none") +
+  theme(
+  panel.grid.minor = element_blank(),
+  panel.grid.major.x = element_blank(),
+  axis.text = element_text(size = 5, family = "Arial", color = c("black")),
+  axis.title.x = element_text(size = 5, family ="Arial", color = c("black")),
+  axis.title.y = element_text(size = 5, family ="Arial", color = c("black")),
+  axis.line = element_line(linewidth = .2), 
+  axis.ticks = element_line(linewidth = .2)) 
+
+ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure3/FA_SArank_HCPD.pdf", device = "pdf", dpi = 500, width = 2.15, height = 1.4)
 ```
 
 ## Thalamocortical Connection Core-Matrix Gradient (CPt) Values
@@ -385,7 +409,7 @@ ggplot(tract.meanCPt.merged, aes(x = mean_CPt.pnc, y = mean_CPt.hcpd)) +
   axis.line = element_line(linewidth = .2), 
   axis.ticks = element_line(linewidth = .2)) 
 
-ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure3/CPt_correlation_PNCHCPD.pdf", device = "pdf", dpi = 500, width = 1.65, height = 1.3)
+ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure3/CPt_correlation_PNCHCPD.pdf", device = "pdf", dpi = 500, width = 1.8, height = 1.4)
 ```
 
 
@@ -419,6 +443,8 @@ perm.sphere.p(x = spin.data$mean_CPt, y = spin.data$SA.axis, perm.id = perm.id.f
 
 *Thalamocortical FA by S-A axis plot*
 
+PNC 
+
 ```{r, warning=FALSE, message=FALSE}
 ggplot(tract.meanCPt.pnc, aes(x = SA.axis, y = mean_CPt)) +
   geom_point(aes(color = SA.axis), size = 0.5) +
@@ -436,6 +462,28 @@ ggplot(tract.meanCPt.pnc, aes(x = SA.axis, y = mean_CPt)) +
   axis.line = element_line(linewidth = .2), 
   axis.ticks = element_line(linewidth = .2)) 
 
-ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure3/CPt_SArank_PNC.pdf", device = "pdf", dpi = 500, width = 2, height = 1.3)
+ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure3/CPt_SArank_PNC.pdf", device = "pdf", dpi = 500, width = 2.15, height = 1.4)
+```
+
+HCPD 
+
+```{r, warning=FALSE, message=FALSE}
+ggplot(tract.meanCPt.hcpd, aes(x = SA.axis, y = mean_CPt)) +
+  geom_point(aes(color = SA.axis), size = 0.5) +
+  geom_smooth(method = "lm", linewidth = 0.3, color = c("gray25")) + 
+  theme_classic() +
+  scale_fill_gradient2(low = "goldenrod1", mid = "white", high = "#6f1282", guide = "colourbar", aesthetics = "color", name = NULL, limits = c(1, 360), midpoint = 180) +
+  labs(x="\nSensorimotor-association axis rank", y="Connection CPt\n") +
+  theme(legend.position = "none") +
+  theme(
+  panel.grid.minor = element_blank(),
+  panel.grid.major.x = element_blank(),
+  axis.text = element_text(size = 5, family = "Arial", color = c("black")),
+  axis.title.x = element_text(size = 5, family ="Arial", color = c("black")),
+  axis.title.y = element_text(size = 5, family ="Arial", color = c("black")),
+  axis.line = element_line(linewidth = .2), 
+  axis.ticks = element_line(linewidth = .2)) 
+
+ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure3/CPt_SArank_HCPD.pdf", device = "pdf", dpi = 500, width = 2.15, height = 1.4)
 ```
 
